# mdBear

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  config.example.toml  config.toml
content/: experience.md  hello.md  index.md
content/blog/: hello.md  post-1.md  post-2.md
defaults/: config.toml
defaults/content/: about.md  index.md
defaults/content/blog/: hello-world.md
defaults/theme/: base.html  blog.html  list.html  page.html  post.html  style.css
public/: hello.html
src/: cli.rs  main.rs  utils.rs
src/cmd/: build.rs  init.rs  mod.rs  serve.rs  sync.rs
templates/: post.html
tests/: vibe_fixture.rs
theme/: base.html  list.html  page.html
