[package]
name = "mdBear"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.56", features = ["derive"] }
gray_matter = "0.3.2"
pulldown-cmark = "0.13.0"
serde = { version = "1.0.228", features = ["derive"] }
tera = "1.20.1"
toml = "0.9.11"
walkdir = "2.5.0"
