[package]
name = "mdbear"
version = "0.1.0"
edition = "2024"
authors = ["Magic Squash <magic_squash@petalmail.com>"]
description = "A static site generator for Bear Blog style websites."
license = "MIT"
repository = "https://github.com/stuPETER12138/mdBear"
homepage = "https://github.com/stuPETER12138/mdBear"
readme = "README.md"
keywords = ["blog", "markdown"]
categories = ["command-line-utilities"]

exclude = [
    ".git",
    ".gitignore",
    "test",
    "target",
]

[[bin]]
name = "mdbear"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.56", features = ["derive"] }
gray_matter = "0.3.2"
notify = "6.1.1"
pulldown-cmark = "0.13.0"
rust-embed = "8.11.0"
serde = { version = "1.0.228", features = ["derive"] }
tera = "1.20.1"
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.11"
walkdir = "2.5.0"
warp = { version = "0.4.2", features = ["server"] }
webbrowser = "1.1.0"
